syntax = "proto3";

package  user;

service UserService {
    rpc SignUp(SignUpRequest) returns (ApiResponse) {};
    rpc SignIn(LoginRequest) returns (ApiResponse) {};
    rpc Logout(LogOutRequest) returns (ApiResponse) {}
}


message LoginRequest{
    string username = 1;
    string passward = 2;
}

message LogOutRequest{
    string username = 1;
}

message SignUpRequest{
    UserModel user = 1;
}

message UserModel {
    int32 id = 1;
    string username = 2;
    string passward = 3;
}

message ApiResponse {
    string response_msg = 1;
    int32 response_code = 2;
}
